--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,13 @@
   </head>
 
   <body>
-    <%= yield %>
+  	<%= render "layouts/navbar" %>
+
+  	
+ 
+					<%= yield %>
+					
+  	
+  	
   </body>
 </html>
