--- a/app/views/usuarios/index.html.erb
+++ b/app/views/usuarios/index.html.erb
@@ -20,6 +20,7 @@
         <td><%= usuario.email %></td>
         <td><%= usuario.cpf %></td>
         <td><%= usuario.senha %></td>
+        <td><%= image_tag usuario.foto, height: '80', width: '60'%></td>
         <td><%= link_to 'Show', usuario %></td>
         <td><%= link_to 'Edit', edit_usuario_path(usuario) %></td>
         <td><%= link_to 'Destroy', usuario, method: :delete, data: { confirm: 'Are you sure?' } %></td>
